2002-10-29  Jody Goldberg <jody@gnome.org>

	* src/workbook-edit.c (workbook_edit_complete_notify) : force an
	  update.  This is kinda ugly but the entire mechanism needs cleanup
	  to make it less gtk specific.

	* src/item-edit.c (item_edit_draw) : create our own layout to handle
	  autocomplete text.

	* src/cell.c (cell_cleanout) : don't crash on cell regions.

2002-10-29  Morten Welinder  <terra@diku.dk>

	* src/dependent.c (dep_collection_release): New macro.
	(unlink_single_dep): Release the collection.
	(MICRO_HASH_hash): Be sane.

2002-10-28  Jody Goldberg <jody@gnome.org>

	* src/dependent.c (link_expr_dep) : DEPENDENT_USES_NAME flag.
	(cb_name_invalidate) : no need to short cuircuit anything.  All the
	  deps are already unlinked.
	(do_deps_destroy) : make sure to unlink things that use names from
	  other sheets so that they don't have stale deps in their
	  GnmNamedExpr::dependents hash.

2002-10-28  Morten Welinder  <terra@diku.dk>

	* src/xml-io.c (xml_sheet_write): fix number of cells.

2002-10-28  Jody Goldberg <jody@gnome.org>

	* src/ranges.c (global_range_parse) : don't create names.
	(global_range_list_parse) : ditto.

	* src/gnumeric.h : Bump the max size

	* src/cell.c (cell_cleanout) : mark the row for respan.

	* src/func.c (gnm_func_add_placeholder) : init ref_notify to NULL
	  explicitly.
	(function_remove) : free the name if necessary.

	* src/print.c (print_job_info_set_one_time_defaults) : patch warning.

	* src/cellspan.c (row_calc_spans) : even merges need to be rendered.

	* src/cell-draw.c (cell_draw) : item-grid takes care of the
	  render/span.
	* src/print-cell.c (print_cell) : ditto.

	* src/print-cell.c (print_cell_range) : check for render/span _before_
	  merges.
	* src/item-grid.c (item_grid_draw) : ditto.

2002-10-27  Jody Goldberg <jody@gnome.org>

	* src/dependent.c (dependents_link) : new.
	(cb_collect_deps_of_name) : new.
	(cb_collect_deps_of_names) : new.