@@ -48,7 +48,7 @@ GNUMERIC_MODULE_PLUGIN_INFO_DECL;
 /* Enables debugging mesgs while reading excel workbooks */
 gint ms_excel_read_debug = 0;
 /* Enables debugging mesgs while reading parsing escher streams */
-gint ms_excel_escher_debug = 10;
+gint ms_excel_escher_debug = 0;
 /* Enables debugging mesgs while reading excel functions */
 gint ms_excel_formula_debug = 0;
 /* Enables debugging mesgs while reading excel charts */
